Fix z-index for dropdown content

--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -57,6 +57,7 @@
   &__content {
     position: absolute;
     top: 44px;
+    z-index: 100;
     width: 100%;
     box-sizing: border-box;
 
